style.css
/* Google fonts */

@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
:root {
    text-align: center;
    font-family: Arial, Helvetica, sans-serif !important;
}

body {
    background: rgb(63, 63, 63);
}

.flex-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: space-between;
}

.form-flex {
    display: flex;
    flex-direction: column;
    align-items: auto;
    /* Adding red for debug purposes
    background-color: red; */
}

.container {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-template-rows: auto minmax(10px, 100vh) auto;
    grid-template-areas: "header header header" ". main ." "footer footer footer";
}

/* Mobile Resizing */

@media (max-width: 600px) {
    .container {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: 1fr minmax(10px, 100vh) auto;
        grid-template-areas: "header" "main" "footer";
    }
    main {
        border-radius: 0px !important;
    }
}

/* wide resizing */

@media (min-width:1050px) {
    .container {
        display: grid;
        grid-template-columns: 1fr 40rem 1fr;
    }
}

header {
    grid-area: header;
    font-family: 'Montserrat', sans-serif;
    text-shadow: 0 0 10px black;
    font-size: 1.5rem;
    margin-top: -1rem;
    margin-bottom: -1rem;
}

header, footer {
    color: white;
}

main {
    grid-area: main;
    grid-row: 2 / 3;
    padding: 2rem;
    background-color: white;
    text-align: left;
    border-style: solid;
    border-radius: 20px;
}

.form-group {
    margin: 0.5rem 0 0.5rem 0;
}

/* Stylize the elements the same */

input[type="text"], input[type="email"], input[type="number"], button[type="submit"] {
    all: unset;
    padding: 10px;
    width: 93%;
    height: 1rem;
    border-style: solid;
    border-radius: 5px;
    border-width: 2px;
    align-items: center;
}

select {
    padding: 5px;
    border-style: solid;
    border-radius: 5px;
    border-width: 2px;

}

textarea {
    width: 100%;
    border-style: solid;
    border-radius: 5px;
    border-width: 2px;
}

button[type="radio"] {
    padding: 5px;
}

label {
    font-weight: bold;
}

select {
    cursor: pointer;
}

#submit {
    background-color: gray;
    border-radius: 5px;
    text-align: center;
    margin-top: 1rem;
    border-style: solid;
    border-color: black;
}

#submit:hover {
    background-color: teal;
    color: white;
    cursor: pointer;
}

footer {
    grid-area: footer;
    position: relative;
    left: 0px;
    bottom: 0px;
}

